--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,26 @@
     transform: translatex(-50%);
   }
 }
+
+ body {
+    background-image: url('/assets/coffee_beans.jpg')
+}
+
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+
+
+  
