--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">All About Coffee</a>
+      <a class="navbar-brand" <%=link_to "All About Coffee", root_path %></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,8 +20,8 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">About</a></li>
-        <li><a href ='#'>Sign Up</a></li>
+        <li><%= link_to "About",   about_path %></li>
+        <li><%= link_to "Sign up now!", signup_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
