--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -12,4 +12,5 @@
                                        data: { confirm: "You sure?" } %>
     <% end %>
   </span>
+  <span class="clearfix"></span>
 </li>
