--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,9 +15,10 @@
   </div>
 <% else %>
 
+<div class="center">
 <% provide(:title, "Home") %>
 <h1>Welcome to All About Coffee</h1>
 <p>All about Coffee is a user friendly web application designed to allow coffee lovers to review and save different coffee brands that's they have enjoyed...or haven't enjoyed so much. Go ahead and make an account to get started or feel free to use the search bar to see other coffee reviews!</p>
-
+</div>
 
 <% end %>
