--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -193,6 +193,7 @@ input {
     color: #FFFFFF;
     display: block;
     margin-left: 60px;
+    clear: both;
   }
   .gravatar {
     float: left;
