--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -182,7 +182,7 @@ input {
   .content {
     display: block;
     margin-left: 60px;
-    color: #FFFFFF;
+    text-color: #FFFFFF;
     img {
       display: block;
       padding: 5px 0;
