--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,6 +3,7 @@
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content">
     <%= micropost.content %>
+    <span class="clearfix"></span>
     <%= image_tag micropost.picture.url if micropost.picture? %>
   </span>
   <span class="clearfix"></span>
