Precompile Assets for Heroku

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,7 +12,7 @@
 
 
  body {
-    
+    background-image: url('/assets/coffee_beans.jpg')
 }
 
 section {
@@ -182,6 +182,7 @@ input {
   .content {
     display: block;
     margin-left: 60px;
+    color: #FFFFFF;
     img {
       display: block;
       padding: 5px 0;
