--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form class="navbar-form navbar-right">
         <div class="form-group">
-          <%= form_tag(microposts_path, :method => "get", id: "search-form") do %>
+          <%= form_tag(microposts_path, method:  :get) do %>
           <%= text_field_tag :search, params[:search], placeholder: "Coffee Reviews" %>
           <%= submit_tag "Search", :name => nil %>
         <% end %>
