--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, "About") %>
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<h1>About Me</h1>
+<p>Hi! I'm Stephen, an aspiring Web Developer who also happens to love Coffee. The idea for this site came about when I lost a bet with my friend and had to order him some "Gourmet" coffee beans. Those beans tasted like ash mixed with vomit. I realized that a lot of smaller independent roasters don't have coffee reveiws online so I made this site to solve that problem. So drink up and write up for safer coffee drinking everywhere.
+<br>
+<%= image_tag('/assets/GLR_Mugs.jpeg', class: "img-responsive col-md-6 col-md-offset-3") %>
+
+</p>
