--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,13 +14,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      
-        <div class="form-group">
+    <div class="form-group">
           <%= form_tag(microposts_path, :method => "get", class: "navbar-form navbar-right") do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Reviews" %>
-    <%= submit_tag "Search", :name => nil %>
-<% end %>        
-</div>
-        <button type="submit" class="btn btn-default">Submit</button>
+          <%= text_field_tag :search, params[:search], placeholder: "Search Reviews" %>
+          <%= submit_tag "Search",  class: "btn btn-default", :name => nil %>
+          <% end %>        
+    </div>
+       
       
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "About",   about_path %></li>
