--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,30 @@
 <% provide(:title, "About") %>
-<h1>About Me</h1>
-<p>Hi! I'm Stephen, an aspiring Web Developer who also happens to love Coffee. The idea for this site came about when I lost a bet with my friend and had to order him some "Gourmet" coffee beans. Those beans tasted like ash mixed with vomit. I realized that a lot of smaller independent roasters don't have coffee reveiws online so I made this site to solve that problem. So drink up and write up for safer coffee drinking everywhere.
-<br>
-<%= image_tag('/assets/GLR_Mugs.jpeg', class: "img-responsive col-md-6 col-md-offset-3") %>
+ <!-- Page Content -->
+    <div class="container">
 
+        <!-- Heading Row -->
+        <div class="row">
+            <div class="col-md-8">
+                <%= image_tag('/assets/GLR_Mugs.jpg', class: "img-responsive img-rounded") %>
+            </div>
+            <!-- /.col-md-8 -->
+            <div class="col-md-4">
+
+<h1>About Me</h1>
+
+
+<p>Hi! I'm Stephen, an aspiring Web Developer who also happens to love Coffee. The idea for this site came about when I lost a bet with my friend and had to order him some "Gourmet" coffee beans. Those beans tasted like ash mixed with vomit. I realized that a lot of smaller independent roasters don't have coffee reveiws online so I made this site to solve that problem. So drink up and write up for safer coffee drinking everywhere.
 </p>
+
+</div>
+            <!-- /.col-md-4 -->
+        </div>
+        <!-- /.row -->
+
+ 		<footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; All about Coffee 2017</p>
+                </div>
+            </div>
+        </footer>
