--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,12 +18,46 @@
   </div>
 <% else %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+
 <% provide(:title, "Home") %>
-<h1>Welcome to All About Coffee</h1>
-<p>All about Coffee is a user friendly web application designed to allow coffee lovers to review and save different coffee brands that's they've enjoyed...or haven't enjoyed so much. Go ahead and make an account to get started or feel free to use the search bar to see other coffee reviews!</p>
-</div>
-</div
+
+<!-- Page Content -->
+    <div class="container">
+
+        <!-- Heading Row -->
+        <div class="row">
+            <div class="col-md-8">
+                <%= image_tag('/assets/coffee_bowl.jpg', class: "img-responsive img-rounded") %>
+            </div>
+            <!-- /.col-md-8 -->
+            <div class="col-md-4">
+                <h1>Welcome to All About Coffee!</h1>
+                <p>All about Coffee is a user friendly web application designed to allow coffee lovers to review and save different coffee brands that's they've enjoyed...or haven't enjoyed so much. Go ahead and make an account to get started or feel free to use the search bar to see other coffee reviews!</p>
+                <a class="btn btn-success btn-block" <%= link_to "Sign Up!",   signup_path %></a>
+            </div>
+            <!-- /.col-md-4 -->
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Call to Action Well -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="well text-center">
+                    This is a well that is a great spot for a business tagline or phone number for easy access!
+                </div>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        <!-- /.row -->
+
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; All about Coffee 2017</p>
+                </div>
+            </div>
+        </footer>
 
 <% end %>
