navbar CSS styling

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
      
-    <div class="form-group">
+    <div class="form-group-group">
           <%= form_tag(microposts_path, :method => "get", class: "navbar-form navbar-right") do %>
           <%= text_field_tag :search, params[:search], placeholder: "Search Reviews" %>
           <%= submit_tag "Search",  class: "btn btn-default", :name => nil %>
