--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "Edit user") %>
+<div class="row">
+<div class="col-md-offset-5">
 <h1>Update your profile</h1>
-
+</div>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
@@ -18,7 +20,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
+      <%= f.submit "Save changes", class: "btn btn-success" %>
     <% end %>
 
     <div class="gravatar_edit">
