--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
-
+<div class="row">
+	<div class="col-md-offset-5">
+		<h1>All users</h1>
+	</div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
 <%= will_paginate %>
 
 <ul class="users">
@@ -10,3 +14,6 @@
 </ul>
 
 <%= will_paginate %>
+
+	</div>
+</div>
