--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,8 +1,12 @@
 <% provide(:title, 'Coffee Reviews') %>
 
 
-<h1>Coffee Reviews</h1>
 
+
+<div class="row">
+	<div class="col-md-offset-5">
+		<h1>Coffee Reviews</h1>
+	</div>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
    
