--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -3,9 +3,8 @@
 
 
 
-<div class="row">
-	<div class="col-md-offset-5">
-		<h1>Coffee Reviews</h1>
+
+		<h1 class="text-center"> Coffee Reviews</h1>
 	</div>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
