--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, "Edit user") %>
-<div class="row">
-<div class="col-md-offset-5">
-<h1>Update your profile</h1>
+
+<h1 class="text-center">Update your profile</h1>
 </div>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
