--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'All users') %>
-<div class="row">
-	<div class="col-md-offset-5">
-		<h1>All users</h1>
-	</div>
+
+<h1 class="text-center">All users</h1>
+	
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 <%= will_paginate %>
