--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
 
   <%= yield %>
 
+<footer class="footer">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; All about Coffee 2017</p>
+                </div>
+            </div>
+</footer>
+
        
 
   
