--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -5,7 +5,7 @@
 
 
 <h1 class="text-center"> Coffee Reviews</h1>
-	
+<div class="container">	
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
    
@@ -16,4 +16,5 @@
       <% end %>
     </div>
 </div>
+
 
