--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -54,7 +54,7 @@
 
         
 
-        <footer>
+        <footer class="footer">
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; All about Coffee 2017</p>
