--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit user") %>
-
+<div class ="container">
 <h1 class="text-center">Update your profile</h1>
 </div>
 <div class="row">
